--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -115,6 +115,42 @@ a {
   text-decoration: underline;
 }
 
+/* Stile per i messaggi di errore */
+.error-message {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.error-message i {
+  margin-right: 10px;
+  font-size: 1.5rem;
+}
+
+/* Stile per i messaggi di successo */
+.success-message {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.success-message i {
+  margin-right: 10px;
+  font-size: 1.5rem;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
