--- a/public/assets/stylesheets/partials/_login.scss
+++ b/public/assets/stylesheets/partials/_login.scss
@@ -21,7 +21,7 @@
       font-size: 1.1rem;
     }
 
-    input {
+    input, select, textarea {
       padding: 0.8rem;
       margin-bottom: 1rem;
       border: 1px solid #ccc;
