--- a/public/assets/stylesheets/style.scss
+++ b/public/assets/stylesheets/style.scss
@@ -26,6 +26,11 @@ a {
 
 @import "partials/login";
 
+@import "partials/dashboard";
+
+@import "partials/recipe";
+
+
 ::-webkit-scrollbar{
   display: none;
 }
