--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -243,6 +243,101 @@ a {
   margin: 2rem 0;
 }
 
+/* Contenitore delle ricette */
+.myRecipes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  /* Stili per il box dei comandi (Modifica / Elimina) */
+}
+.myRecipes .ricetta {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 8px;
+  width: 80%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.myRecipes .ricetta:hover .title {
+  text-decoration: none;
+}
+.myRecipes .ricetta .title {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #444;
+}
+.myRecipes .ricetta .description {
+  font-size: 1rem;
+  color: #666;
+  margin-top: 10px;
+}
+.myRecipes .commands {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.myRecipes .commands a {
+  display: inline-flex;
+  align-items: center;
+  padding: 8px 15px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #333333;
+  border-radius: 5px;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+  margin: 1rem;
+}
+.myRecipes .commands a i {
+  margin-right: 5px;
+}
+.myRecipes .commands a:hover {
+  background-color: black;
+}
+
+.ingredients {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 10px;
+}
+
+/* Stile per ogni scheda ingrediente */
+.ingredient {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.ingredient:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+}
+
+/* Titolo dell'ingrediente */
+.ingredient .title {
+  font-size: 1.2em;
+  color: #333333;
+  margin: 0 0 10px;
+}
+
+/* Descrizione nel caso non vi siano ingredienti */
+.ingredient .description {
+  font-size: 1em;
+  color: #7F8C8D;
+}
+
+/* Responsive: per schermi piccoli */
+@media (max-width: 600px) {
+  .ingredients {
+    grid-template-columns: 1fr;
+  }
+}
 .recipe-detail {
   max-width: 800px;
   margin: 3rem auto;
